WeatherAPI/K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/scheme: internet-facing
    nginx.ingress.kubernetes.io/target-type: ip
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   #- host: afdf6b5d8020442d38f10ccb73b78ed2-399757259.eu-central-1.elb.amazonaws.com
   - host: weather.default.svc.cluster.local
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather
            port:
              number: 80
